add: chain get null pointer exception

--- a/sonar-pmd-plugin/src/main/resources/org/sonar/l10n/pmd.properties
+++ b/sonar-pmd-plugin/src/main/resources/org/sonar/l10n/pmd.properties
@@ -434,3 +434,4 @@ rule.pmd.ClassCastExceptionWithSubListToArrayListRule.name=[p3c]Do not cast subL
 rule.pmd.ConcurrentExceptionWithModifyOriginSubListRule.name=[p3c]When using subList, be careful to modify the size of original list.
 rule.pmd.DontModifyInForeachCircleRule.name=[p3c]Do not remove or add elements to a collection in a foreach loop.
 rule.pmd.CollectionInitShouldAssignCapacityRule.name=[p3c]HashMap should set a size when initializing.
+rule.pmd.CheckNullAfterMapGetRule.name=[p3c]Always check for null after retrieving a value from a Map.
